[package]
name = "rust-gmp"
version = "0.5.0"
authors = [ "thestinger <danielmicay@gmail.com>", "Bartłomiej Kamiński <fizyk20@gmail.com>" ]
description = "Rust bindings for GMP"
repository = "https://github.com/fizyk20/rust-gmp"
documentation = "https://docs.rs/rust-gmp"
license = "MIT"
keywords = [ "gmp", "multi", "precision", "arithmetic", "bignum" ]

[lib]
name = "gmp"

[features]
default = []

# Feature for enabling de/serialization of Mpz
serde_support = ["serde", "serde_derive", "serde_json"]

[dependencies]
libc = "~0.2"
num-traits = "0.1"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
